feat: Type-safe Grok LLM integration and MapStruct DTO mapping
Major Changes:
- Implemented type-safe Grok API DTOs (GrokApiRequest/Response)
- Integrated MapStruct 1.5.5.Final for compile-time DTO mapping
- Added development automation scripts (startup.sh/shutdown.sh)
- Refactored repository layer to infrastructure/repository/
- Updated controllers and services to use dependency-injected mappers

Technical Improvements:
- Zero runtime overhead with MapStruct compile-time generation
- Removed unsafe Map<String, Object> usage in GrokClient
- Spring-managed mapper beans with @Mapper(componentModel = "spring")
- Fixed leverage initialization skip logic in SimpleTradingBotApplication
- Added .env configuration support

Infrastructure:
- Automated startup/shutdown scripts for Docker Compose services
- PostgreSQL, Redis, Kafka, Zookeeper orchestration
- Health check monitoring in startup script

Testing: All 28 unit tests passing, application running on port 8080